@@ -20,6 +20,7 @@ New Features in taskwarrior 2.4.0
     the urgency values of the dependency chain.
   - Listing breaks now supported.  See 'man taskrc'.
   - New fish shell completion script.
+  - Hooks.
 
 New commands in taskwarrior 2.4.0
 
@@ -35,6 +36,7 @@ New configuration options in taskwarrior 2.4.0
     potentially dangerous combination of write commands and empty filters.
   - New truncated_count column style for the description field which as the
     name says is a combination of the existing truncated and count styles.
+  - New 'hooks' setting is a master control switch for hook processing.
 
 Newly deprecated features in taskwarrior 2.4.0
 
